<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/domainpage"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/domain_page" />

        <item
            android:id="@+id/names"
            android:icon="@drawable/list"
            android:title="@string/names" />

        <item
            android:id="@+id/rates"
            android:icon="@drawable/ic_rating_24dp"
            android:title="@string/rating" />

        <item
            android:id="@+id/budget"
            android:icon="@drawable/coins"
            android:title="@string/budget" />

        <item
            android:id="@+id/combine"
            android:icon="@drawable/economyicon"
            android:title="Analysis" />


        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback" />


    </group>



    <group android:checkableBehavior="single" >

        <item android:title="@string/exit">

            <menu>

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/logout" />

            </menu>



        </item>



    </group>







</menu>