<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="Registration"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_my_location_orange_24dp"
        tools:ignore="HardcodedText">

    </ImageView>


    <EditText
        android:id="@+id/username"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"

        android:autofillHints="no"
        android:background="@android:color/background_light"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username_log"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/password"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"


        android:layout_marginRight="10dp"
        android:background="@android:color/background_light"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password_log"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"


        android:background="@drawable/rectangular_box"
        android:enabled="true"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"

        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/not_registered_click_down_here"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"


        android:enabled="true"
        android:text="@string/sign_up"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"


        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>

