<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="3dp"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:text="@string/domains"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="35sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/select_a_particular_domain"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="15sp" />

            </LinearLayout>


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="30dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:padding="18dp"
                android:rowCount="3"
                tools:ignore="UselessParent"
                tools:targetApi="o">


                <!-- row 1 column 1-->
                <androidx.cardview.widget.CardView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">


                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/list"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="100dp"
                        android:text="All"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />


                </androidx.cardview.widget.CardView>

                <!-- row 1 column 2-->
                <androidx.cardview.widget.CardView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">


                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/med"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/medicalicon" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="19dp"
                        android:layout_marginLeft="19dp"
                        android:layout_marginTop="100dp"
                        android:text="Medical"
                        android:textColor="#6a0dad "
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />


                </androidx.cardview.widget.CardView>


                <!-- row 2 column 1-->
                <androidx.cardview.widget.CardView

                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">


                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/arts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/paint" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="33dp"
                        android:layout_marginLeft="33dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/arts"
                        android:textAlignment="center"
                        android:textColor="#ff69b4"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>


                <!-- row 2 column 2-->
                <androidx.cardview.widget.CardView

                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">


                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/law"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/balance1"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="33dp"
                        android:layout_marginLeft="33dp"
                        android:layout_marginTop="100dp"
                        android:text="Law"
                        android:textAlignment="center"
                        android:textColor="@color/darkblue"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                </androidx.cardview.widget.CardView>


                <!-- row 3 column 1-->

                <androidx.cardview.widget.CardView

                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/tech"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/networkicon"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/technology"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="19sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>


                <!-- row 3 column 2-->

                <androidx.cardview.widget.CardView

                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/business"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/coins"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/business"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="19sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>


            </GridLayout>


            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="12sp"
                android:text="LogOut"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>

